--- a/index.html
+++ b/index.html
@@ -3,22 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Page de démonstration Bootstrap</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-    bonjour hello world
-    <ul class="nav nav-pills nav-fill gap-2 p-1 petit bg-primaire arrondi-5 ombre-sm" id="pillNav2" role="tabliste" style="--bs-nav-link-color: var(--bs-blanc); --bs-nav-pills-link-active-color: var(--bs-primaire); --bs-nav-pills-link-active-bg: var(--bs-blanc);">
-        <li class="élément de navigation" role="présentation">
-            <bouton class="lien de navigation actif arrondi-5" id="onglet d'accueil2" data-bs-toggle="onglet" type="bouton" role="onglet" aria-selected="vrai">Home</bouton>
-        </li>
-        <li class="élément de navigation" role="présentation">
-            <bouton class="lien de navigation arrondi-5" id="onglet de profil2" data-bs-toggle="onglet" type="bouton" role="onglet" aria-selected="faux">Profile</bouton>
-        </li>
-        <li class="élément de navigation" role="présentation">
-            <bouton class="lien de navigation arrondi-5" id="contact-tab2" data-bs-toggle="onglet" type="bouton" role="onglet" aria-selected="faux">Contact</bouton>
-        </li>
-    </ul>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <header class="bg-primary text-white p-3">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container">
+                <a class="navbar-brand" href="#">Mon Site</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#">Accueil</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">À propos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main class="container mt-4">
+        <div class="row">
+            <div class="col-md-8">
+                <h1 class="display-4">Bienvenue sur mon site</h1>
+                <p class="lead">Ce site utilise Bootstrap pour une mise en page responsive et moderne.</p>
+                <p>Ceci est un paragraphe de texte normal. Bootstrap fournit des classes pour styliser le texte, comme <mark>le texte mis en évidence</mark> ou <small>le texte en petit</small>.</p>
+                <blockquote class="blockquote">
+                    <p>Une citation bien connue, contenue dans un élément blockquote.</p>
+                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                </blockquote>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Dernières actualités</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Nouvelle fonctionnalité ajoutée</a></li>
+                            <li><a href="#">Mise à jour de sécurité</a></li>
+                            <li><a href="#">Événement à venir</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Carte 1</h5>
+                        <p class="card-text">Contenu de la première carte.</p>
+                        <a href="#" class="btn btn-primary">En savoir plus</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Carte 2</h5>
+                        <p class="card-text">Contenu de la deuxième carte.</p>
+                        <a href="#" class="btn btn-primary">En savoir plus</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer class="bg-dark text-white text-center p-3 mt-4">
+        &copy; 2025 Mon Site. Tous droits réservés.
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </body>
-</html>
+</html>   
