--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                         <li class="nav-item"><a class="nav-link" href="#">Accueil</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">À propos</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="page_Fadhila.html">Fadhila</a></li>
+                        <li class="nav-item"><a class="nav-link" href="gallerie.html">Gallerie</a></li>
                     </ul>
                 </div>
             </div>
